Added more visuals

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,26 @@
 @font-face{
-  font-family: 'VT323', monospace;
-  src: url("/assets/VT323-Regular.ttf");
+  font-family: 'Upheaval';
+  src: url("/assets/upheavtt.ttf");
 }
 
 canvas{
   display: block;
-  margin: 0 auto;
+  margin: 3em auto;
+  border: solid white 5px;
   border-radius: 20px;
+}
+
+body{
+  margin: 0;
+  padding: 0;
+  font-family: 'Upheaval';
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/assets/galaxy.png");
+  background-repeat: repeat;
+  background-blend-mode: darken;
+}
+
+p{
+  font-size: 1em;
+  text-align: center;
+  color: white;
 }
