--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 @font-face{
   font-family: 'Upheavtt';
-  src: url('/assets/upheavtt.ttf');
+  src: url('../assets/upheavtt.ttf');
 }
 
 canvas{
@@ -14,7 +14,7 @@ body{
   margin: 0;
   padding: 0;
   font-family: 'Upheavtt';
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/assets/galaxy.png');
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../assets/galaxy.png');
   background-repeat: repeat;
 }
 
